# Caly

./: plan.md  scrapper.py
caly/: go.mod  go.sum  hours.json  lectures.json
caly/cmd/: main.go
caly/internal/data/: appleCalender.go  fetch.go  hours.go  lectures.go
caly/internal/ui/: colors.go  home.go  table.go
scraper/: hours.json  pyproject.toml
scraper/src/calender_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
scraper/src/scraper/: __init__.py  cli.py  fetch.py  parse.py  save.py
