[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calender-scraper"
version = "0.1.0"
description = "Scraper for FH Technikum Wien CIS calendar API"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
]

[project.scripts]
scraper = "scraper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
